<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_marginTop="20dp"
        android:padding="10dp"
        android:layout_margin="20dp"
        android:hint="@string/enter_name"
        android:layout_height="wrap_content"/>

    <EditText
        android:layout_width="match_parent"
        android:padding="10dp"
        android:layout_margin="20dp"
        android:hint="@string/enter_password"
        android:layout_height="wrap_content"/>

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_gravity="center_horizontal"
       android:gravity="center"
       android:layout_height="wrap_content">
      <Button
          android:id="@+id/login"
          android:layout_width="wrap_content"
          android:layout_margin="10dp"
          android:layout_weight="1"
          android:onClick="ClickHandler"
          android:text="@string/login"
          android:layout_height="wrap_content"/>

      <Button
          android:id="@+id/home"
          android:layout_width="wrap_content"
          android:text="@string/home"
          android:layout_weight="1"
          android:layout_margin="10dp"
          android:onClick="ClickHandler"
          android:gravity="end"
          android:layout_height="wrap_content"/>

       <Button
           android:id="@+id/google"
           android:layout_width="wrap_content"
           android:text="@string/google"
           android:layout_weight="1"
           android:layout_margin="10dp"
           android:onClick="ClickHandler"
           android:gravity="end"
           android:layout_height="wrap_content"/>


       <Button
           android:id="@+id/dail"
           android:layout_width="wrap_content"
           android:text="@string/dail"
           android:layout_margin="10dp"
           android:layout_weight="1"
           android:onClick="ClickHandler"
           android:gravity="end"
           android:layout_height="wrap_content"/>

   </LinearLayout>
  <TextView
      android:layout_width="wrap_content"
      android:layout_margin="20dp"
      android:id="@+id/mytxt"
      android:layout_height="wrap_content"/>

    <Spinner
        android:layout_width="match_parent"
        android:layout_margin="20dp"
        android:entries="@array/lanuage"
        android:layout_height="wrap_content"/>
    <Button
        android:id="@+id/sarf"
        android:layout_width="wrap_content"
        android:text="SARF"
        android:layout_margin="20dp"
        android:layout_gravity="center"
        android:onClick="ClickHandler"
        android:gravity="end"
        android:layout_height="wrap_content"/>



</LinearLayout>